# cabinet

./: .gitignore  CHANGELOG.md  README.md  cabinet.cabal  cabinet.nix  default.nix  flake.nix  shell.nix
app/: Main.hs  Resources.hs
backend/: cabal-package.nix  cabinet.cabal  default.nix
backend/app/: Main.hs  Resources.hs
backend/lib/Data/: Cabinet.hs
backend/test/: Test.hs
frontend/: default.nix  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: BackendMetadata.svelte  FileList.svelte  FileUpload.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/static/: favicon-credits
lib/Data/: Cabinet.hs
static/: styles.css
