cabal-version:      3.0
name:               cabinet
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs: lib
    exposed-modules: Data.Cabinet
    default-language: Haskell2010

    build-depends:
      base ^>= 4.18,
      bytestring ^>= 0.12,
      text ^>= 2.1,
      time ^>= 1.14,
      stm ^>= 2.5.1,
      containers >= 0.6,
      uuid ^>= 1.3


executable cabinet-srv
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base ^>= 4.18,
      bytestring ^>= 0.12,
      scotty ^>= 0.22,
      text ^>= 2.1,
      stm ^>= 2.5.1,
      uuid ^>= 1.3,
      blaze-html ^>= 0.9.2,
      blaze-markup ^>= 0.8.3,
      wai-extra ^>= 3.1.14,
      http-types ^>= 0.12.4,
      cabinet

    hs-source-dirs:   app
    default-language: Haskell2010


Test-Suite test-cabinet
    type:	exitcode-stdio-1.0
    main-is:	Test.hs
    hs-source-dirs:	test

    build-depends:
     base ^>= 4.18,
     HUnit ^>= 1.6,
     bytestring ^>= 0.12,
     cabinet

