cabal-version:      3.0
name:               cabinet
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-files: static/*.css

common warnings
    ghc-options: -Wall

library
    hs-source-dirs: lib
    exposed-modules: Data.Cabinet
    default-language: Haskell2010

    build-depends:
      base ^>= 4.18,
      bytestring >= 0.10,
      text >= 2.0,
      time >= 1.8,
      stm ^>= 2.5.1,
      containers >= 0.6,
      uuid ^>= 1.3

executable cabinet-srv
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_cabinet, Resources
    build-depends:
      base ^>= 4.18,
      bytestring >= 0.10,
      scotty >= 0.20 && <= 0.23,
      text >= 2.0,
      stm ^>= 2.5.1,
      uuid ^>= 1.3,
      wai-extra ^>= 3.1.14,
      http-types ^>= 0.12.4,
      HTTP ^>= 4000.4,
      aeson ^>= 2.1,
      cabinet

    hs-source-dirs:   app
    default-language: Haskell2010


Test-Suite test-cabinet
    type:	exitcode-stdio-1.0
    main-is:	Test.hs
    hs-source-dirs:	test
    default-language: Haskell2010

    build-depends:
     base ^>= 4.18,
     HUnit ^>= 1.6,
      bytestring >= 0.10,
     cabinet

